--- a/public/stylesheets/hill.css
+++ b/public/stylesheets/hill.css
@@ -4,6 +4,7 @@
 	width: 22em;
 	padding: 1em;
 	float: left;
+	margin: 0 .5em;
 }
 
 .hill:hover {
@@ -114,5 +115,7 @@ ol
 @media screen and (max-width: 640px) {
 	.hill {
 		border-top: 2px solid black;
+		margin: 0;
+		padding: 0;
 	}
 }
